# ccpclean

./: .gitignore  Cargo.toml  README.md  README_EN.md  rust-toolchain.toml
.github/workflows/: release.yml
docs/plans/: 2026-02-25-ccpclean-design.md  2026-02-25-ccpclean.md
src/: cli.rs  filter.rs  killer.rs  main.rs  process_info.rs  scanner.rs
src/tui/: detail_view.rs  list_view.rs  mod.rs  runner.rs
