[package]
name = "ccpclean"
version = "0.1.0"
edition = "2021"
description = "Scan and clean up orphaned local web service processes"
license = "MIT"
repository = "https://github.com/yeung66/ccpclean"
keywords = ["process", "cli", "tui", "devtools", "cleanup"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ccpclean"
path = "src/main.rs"

[dependencies]
sysinfo = "0.32"
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
netstat2 = "0.10"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/ccpclean-linux-x86_64.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/ccpclean-windows-x86_64.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/ccpclean-linux-x86_64.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/ccpclean-linux-x86_64.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/ccpclean-macos-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/ccpclean-macos-aarch64.tar.gz"

[profile.release]
strip = true
opt-level = 3
